src/content/v2/editor/extensions/nodes/task-list.mdx
---
title: TaskList extension
tags:
  - type: image
    src: https://img.shields.io/npm/v/@tiptap/extension-task-list.svg?label=version
    url: https://www.npmjs.com/package/@tiptap/extension-task-list
    label: Version
  - type: image
    src: https://img.shields.io/npm/dm/@tiptap/extension-task-list.svg
    url: https://npmcharts.com/compare/@tiptap/extension-task-list?minimal=true
    label: Downloads
extension:
  name: Task List
  link: https://github.com/ueberdosis/tiptap/tree/main/packages/extension-task-list
  description: 'Adds support for tasks (though it won’t make sure you actually complete them).'
  type: node
  icon: ListChecks
meta:
  title: TaskList extension | Tiptap Editor Docs
  description: Use the Task List extension in Tiptap to add support for task lists rendered as <ul data-type="taskList">. More in our docs!
  category: Editor
---

import { CodeDemo } from '@/components/CodeDemo'

This extension enables you to use task lists in the editor. They are rendered as `<ul data-type="taskList">`. This implementation doesn’t require any framework, it’s using Vanilla JavaScript only.

Type <code>[ ] </code> or <code>[x] </code> at the beginning of a new line and it will magically transform to a task list.

<CodeDemo path="/Nodes/TaskList" />

## Install

```bash
npm install @tiptap/extension-task-list @tiptap/extension-task-item
```

This extension requires the [`TaskItem`](/editor/extensions/nodes/task-item) extension.

## Settings

### HTMLAttributes

Custom HTML attributes that should be added to the rendered HTML tag.

```js
TaskList.configure({
  HTMLAttributes: {
    class: 'my-custom-class',
  },
})
```

### itemTypeName

Specify the list item name.

Default: `'taskItem'`

```js
TaskList.configure({
  itemTypeName: 'taskItem',
})
```

## Commands

# toggleTaskList()

Toggle a task list.

```js
editor.commands.toggleTaskList()
```

## Keyboard shortcuts

| Command          | Windows/Linux                                        | macOS                                            |
| ---------------- | ---------------------------------------------------- | ------------------------------------------------ |
| toggleTaskList() | <kbd>Control</kbd> + <kbd>Shift</kbd> + <kbd>9</kbd> | <kbd>Cmd</kbd> + <kbd>Shift</kbd> + <kbd>9</kbd> |

## Source code

[packages/extension-task-list/](https://github.com/ueberdosis/tiptap/blob/main/packages/extension-task-list/)
